--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "postcss": "^8.5.3",
+    "query-string": "^9.1.1",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
@@ -70,6 +71,7 @@
     "tailwindcss": "^4.0.11",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "use-debounce": "^10.0.4",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
   },
